MainActivity: Add filter bottom sheet & clean code
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -344,4 +344,6 @@
     If your Bilibili app cannot handle b23.tv link directly, we can help you to forward intents.
     ]]></string>
 
+    <string name="more_settings_button">More settings</string>
+
 </resources>
