Proxy: Allow share link to launch
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -291,9 +291,13 @@
 
     <string name="experiment_settings_title">实验室</string>
     <string name="firebase_title">Firebase</string>
-    <string name="handle_b23_url_title">处理 b23.tv 链接并打开哔哩哔哩</string>
-    <string name="handle_b23_url_summary"><![CDATA[
+    <string name="proxy_b23_url_title">处理 b23.tv 链接并打开哔哩哔哩</string>
+    <string name="proxy_b23_url_summary"><![CDATA[
     如果你的哔哩哔哩客户端不能直接打开 b23.tv 链接，我们可以帮你转发启动 Intent。
+    ]]></string>
+    <string name="proxy_live_share_title">分享哔哩哔哩直播来打开字幕</string>
+    <string name="proxy_live_share_summary"><![CDATA[
+    你可以从哔哩哔哩客户端分享直播链接到悬浮字幕来快速启动。
     ]]></string>
 
     <string name="more_settings_button">更多设置</string>
