--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,9 +309,13 @@
 
     <string name="experiment_settings_title">Experiment</string>
     <string name="firebase_title">Firebase</string>
-    <string name="handle_b23_url_title">Handle b23.tv link and open bilibili</string>
-    <string name="handle_b23_url_summary"><![CDATA[
+    <string name="proxy_b23_url_title">Handle b23.tv link and open bilibili</string>
+    <string name="proxy_b23_url_summary"><![CDATA[
     If your Bilibili app cannot handle b23.tv link directly, we can help you to forward intents.
+    ]]></string>
+    <string name="proxy_live_share_title">Share Bilibili Live to open subtitle</string>
+    <string name="proxy_live_share_summary"><![CDATA[
+    You can share live link to FloatingSubtitle to launch quickly.
     ]]></string>
 
     <string name="more_settings_button">More settings</string>
