--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -330,4 +330,25 @@
     <string name="pattern_rule_regex_error_invalid">表達式不符合規範。</string>
     <string name="pattern_rule_rule_from_old_ver_title">舊版本恢復的規則</string>
 
+    <string name="danmaku_history_title">彈幕歷史</string>
+    <string name="danmaku_history_toggle_item_title">記錄彈幕歷史</string>
+    <string name="danmaku_history_toggle_item_summary"><![CDATA[
+    彈幕歷史會被保存至應用程式資料中。然後你可以匯出歷史檔案到外部儲存或者其它程式。
+    ]]></string>
+    <string name="danmaku_history_saved_files_title">已保存的檔案</string>
+    <string name="danmaku_history_item_title_format">%s（%d）的歷史</string>
+    <string name="danmaku_history_unsubscribed_title">未訂閱</string>
+    <string name="action_export">匯出</string>
+    <string name="action_preview">預覽</string>
+    <string name="danmaku_history_dialog_source_title">彈幕來源</string>
+    <string name="danmaku_history_dialog_last_modified_title">修改時間</string>
+    <string name="danmaku_history_dialog_file_path_title">檔案路徑</string>
+    <string name="danmaku_history_delete_confirm_title">確認</string>
+    <string name="danmaku_history_delete_confirm_message"><![CDATA[
+    你要刪除檔案 %s 嗎？操作確認后無法恢復。
+    ]]></string>
+    <string name="toast_danmaku_history_file_used"><![CDATA[
+    這個歷史檔案正在使用中，請在刪除活躍的文件前停止彈幕服務。
+    ]]></string>
+
 </resources>
