--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -371,5 +371,6 @@
     <string name="text_gravity_center">居中对齐</string>
     <string name="text_gravity_end">向右对齐</string>
     <string name="text_gravity_title">文本对齐方式</string>
+    <string name="dark_mode_summary_format">%s（需要重启以生效）</string>
 
 </resources>
